--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body> 
     <table>
-      <tr><div>Welcome to AstraZeneca!!!<img src="https://www.gravatar.com/avatar/781878e32cce546ede96795eb76e6877?s=32&amp;d=identicon&amp;r=PG" alt="" width="32" height="32">
+      <tr><div>Welcome to AstraZeneca for the demo!!!<img src="https://www.gravatar.com/avatar/781878e32cce546ede96795eb76e6877?s=32&amp;d=identicon&amp;r=PG" alt="" width="32" height="32">
         </div></tr>
     </table>
   </body>
