--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body> 
     <table>
-      <tr><div>Welcome to AstraZeneca for the demo!!!<img src="http://i.vimeocdn.com/video/51129913_1280x720.jpg" alt="" width="32" height="32">
+      <tr><div>Welcome to AstraZeneca for the demo!!!<img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4f/AstraZeneca.svg/1280px-AstraZeneca.svg.png" alt="" width="32" height="32">
         </div></tr>
     </table>
   </body>
