--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   
   <body> 
-    <div>" alt="" width="32" height="32"></https://upload.wikimedia.org/wikipedia/en/thumb/4/4f/AstraZeneca.svg/1280px-AstraZeneca.svg.png" alt="" width="32" height="32"></div>
+    <div>
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4f/AstraZeneca.svg/1280px-AstraZeneca.svg.png" alt="" width="32" height="32">  
+    </div>
     <table>
       <tr><div>Welcome to AstraZeneca for the demo!!!
        
